--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
-    <string name="app_name">NoteKeeper</string>
-    <string name="title_activity_compartides">Compartides</string>
-    <string name="title_activity_agenda">agenda</string>
-    <string name="title_activity_compartir">compartir</string>
+    <string name="app_name">notekeeper</string>
+    <string name="home">Home</string>
+    <string name="add">Add</string>
+    <string name="profile">Profile</string>
+    <string name="settings">Settings</string>
+    <string name="bin">Bin</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="busca">Busca...</string>
+    <string name="nom_de_la_nota_placeholder">Nom de la nota (PLACEHOLDER)</string>
+    <string name="text_de_la_nota_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Text de la nota, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
+    <string name="desplegable">Desplegable</string>
 </resources>
